--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "redis": "~0.8.2"
+    "redis": "2.6.5"
   },
   "devDependencies": {
     "mocha": "~1.8.1",
