--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --reporter spec --timeout 5000"
   },
+  "engines": { "node": ">=8.0" },
   "repository": "",
   "author": "",
   "license": "MIT",
